@@ -1,4 +1,8 @@
+SphereSim 2.4.2:
 * Improved simulated system.
+* Improved PKGBUILD build flags.
+* Improved MainWindow to handle selected simulated system correctly.
+* Added new simulated system, as a benchmark as well.
 
 SphereSim 2.4.1:
 * Improved simulated systems in Viewer and Grapher.
